--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<version>[4.0,)</version>
 		</dependency>
 		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-stream</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
